updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I's a software Developer with a background in graphic design...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Caracas, Venezuela</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>workout at the gym and video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Work for a big company with plenty of proyects</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Melbourne, Australia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>i'd like to create from scratch websites</p>
     </section>
 
     <footer id="footer">
